--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastapi==0.95.1
-langchain==0.0.129
-langchain-core==0.0.99
-langchain-openai==0.0.7
-langchain-community==0.0.4
-langchain-text-splitters==0.0.2
-openai==0.27.0
-getpass==0.4.3
-uvicorn==0.22.0
-streamlit==1.20.0
+fastapi
+langchain
+langchain-core
+langchain-openai
+langchain-community
+langchain-text-splitters
+openai
+getpass
+uvicorn
+streamlit
